[package]
name = "btutils"
version = "0.1.0"
authors = ["Curtis Maves <curtis@maves.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.9.0", features = ["attributes"] }
futures = "0.3"
# rustable = { path = "/home/cmaves/rustable" }
rustable = { git = "https://github.com/cmaves/rustable.git", branch = "async" }
async-rustbus = { git = "https://github.com/cmaves/async-rustbus.git" }

[dev-dependencies]
rand = "0.8"
